force-app/main/default/objects/Contract_Form_Template__c/Contract_Form_Template__c.object-meta.xml
<CustomObject>
    <label>Contract Form Template</label>
    <nameField>
        <label>Contract Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>