force-app/main/default/objects/Contract_Form_Template__c/fields/Article_3_Single_Payment__c.field-meta.xml
<CustomField>
    <fullName>Article_3_Single_Payment__c</fullName>
    <label>Article 3 Single Payment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>