force-app/main/default/objects/Contract_Form_Template__c/fields/Article_4__c.field-meta.xml
<CustomField>
    <fullName>Article_4__c</fullName>
    <label>Article 4</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>