force-app/main/default/objects/Contract_Form_Template__c/fields/Article_5__c.field-meta.xml
<CustomField>
    <fullName>Article_5__c</fullName>
    <label>Article 5</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>