force-app/main/default/objects/Contract_Form_Template__c/fields/Article_6__c.field-meta.xml
<CustomField>
    <fullName>Article_6__c</fullName>
    <label>Article 6</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>